--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,14 @@
+:root {
+  --background-color: black;
+  --color: white;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
+  background-color: var(--background-color);
+  color: var(--color);
   font-family: 'Poppins', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
