--- a/src/components/GitHubCorner/GitHubCorner.module.css
+++ b/src/components/GitHubCorner/GitHubCorner.module.css
@@ -10,6 +10,7 @@
 	border: 0;
 	right: 0;
 	z-index: 1;
+	filter: drop-shadow(-20px -20px 20px black) drop-shadow(20px 20px 20px black);
 }
 
 .octoArm {
