--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -8,9 +8,9 @@
 }
 
 
-@media (max-width: 800px){
+@media (max-width: 600px){
 	.form {
-		grid-template-columns: auto;
+    display: block;
 	}
 
 	.messageWrapper {
