--- a/src/components/Work/Work.module.css
+++ b/src/components/Work/Work.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-	padding: 0.5em;
+	padding: 0.5em 0;
 	display: grid;
 	gap: 1em;
 	grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
@@ -16,6 +16,7 @@
 	flex-direction: column;
 	height: max-content;
 	padding: 1em;
+	max-width: 80vw;
 }
 
 .workItem[data-background="light"]{
@@ -48,7 +49,6 @@
 	padding: 0.25em !important;
 	width: 100%;
 	min-width: 25vmin;
-	max-height: 25vmin;
 	height: auto;
 	object-fit: contain;
 	margin: auto;
@@ -92,6 +92,7 @@
 	padding: 1em;
 	background-color: hsl(216, 28%, 14%);
 	border-radius: 1em;
+	max-width: 80vw;
 }
 
 .filterButtons {
