--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -13,8 +13,12 @@
 
 .modal > div {
   position: relative;
-  background-color: white;
-  color: black;
+  background-color: #383838;
+  box-shadow:
+    rgba(0, 0, 0, 0.5) 0px 11px 15px -7px,
+    rgba(0, 0, 0, 0.5) 0px 24px 38px 3px,
+    rgba(0, 0, 0, 0.5) 0px 9px 46px 8px;
+  color: white;
   border-radius: 1em;
   padding: 1em;
   display: flex;
