--- a/src/components/Work/Work.module.css
+++ b/src/components/Work/Work.module.css
@@ -17,6 +17,7 @@
 	height: max-content;
 	padding: 1em;
 	max-width: 80vw;
+	cursor: pointer;
 }
 
 .workItem[data-background="light"]{
@@ -52,6 +53,68 @@
 	height: auto;
 	object-fit: contain;
 	margin: auto;
+}
+
+.fullWorkItem {
+	text-align: center;
+	max-width: 75vw;
+	max-height: 90vh;
+	overflow-y: auto;
+}
+
+.fullMedia {
+	max-width: 100%;
+	max-height: 50vmin;
+}
+
+.fullIcon {
+	height: 100px;
+	max-width: 100px;
+	flex: 1;
+	margin: 0.25em;
+	background-color: rgb(26, 34, 46);
+	border-radius: 1em;
+	margin: 0.1em;
+	padding: 0.1em;
+}
+
+
+.fullIcon[data-background="light"] {
+	background: white;
+}
+
+.fullWorkTags {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 1em;
+	padding: 1em;
+}
+
+@media (max-width: 600px) {
+	.fullWorkTags {
+		grid-template-columns: 1fr;
+	}
+}
+
+.fullWorkTags > span {
+	background-color: hsl(216, 28%, 7%);
+	border-radius: 1em;
+	padding-bottom: 0.5em;
+}
+
+.iconsWrapper {
+	padding-top: 0.5em;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+}
+
+.sourceAnchor {
+	float: left;
+}
+
+.liveAnchor {
+	float: right;
 }
 
 .icon {
