--- a/src/components/Work/Work.module.css
+++ b/src/components/Work/Work.module.css
@@ -2,10 +2,21 @@
 	padding: 0.5em 0;
 	display: grid;
 	gap: 1em;
-	grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+	grid-template-columns: repeat(auto-fit, 33%);
 	justify-items: center;
 	align-items: center;
+	grid-template-rows: 1fr 1fr;
+	grid-auto-flow: column;
+	overflow: scroll;
 }
+
+@media (max-width: 800px) {
+	.wrapper {
+		grid-auto-flow: row;
+		height: 100vh;
+	}
+}
+
 
 .workItem {
 	position: relative;
@@ -14,7 +25,8 @@
 	border-radius: 1em;
 	display: flex;
 	flex-direction: column;
-	height: max-content;
+	height: 100%;
+	width: 100%;
 	padding: 1em;
 	max-width: 80vw;
 }
