--- a/src/components/Work/Work.module.css
+++ b/src/components/Work/Work.module.css
@@ -30,7 +30,7 @@
 	width: 100%;
 	padding: 1em;
 	max-width: 80vw;
-	max-height: 75vh;
+	max-height: 33vh;
 }
 
 .workItem[data-background="light"]{
@@ -60,6 +60,7 @@
 }
 
 .media, .media img {
+	position: relative;
 	background: none;
 	border: 0;
 	padding: 0.25em !important;
@@ -70,6 +71,19 @@
 	margin: auto;
 	cursor: pointer;
 	overflow: hidden;
+}
+
+.media .playIcon {
+	position: absolute !important;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 2rem;
+	height: 2rem;
+	min-width: auto;
+	background: rgba(255, 255, 255, 1);
+	border: 1px solid black;
+	border-radius: 100%;
 }
 
 .fullWorkItem {
