--- a/src/components/AboutMe/AboutMe.module.css
+++ b/src/components/AboutMe/AboutMe.module.css
@@ -4,6 +4,12 @@
 	height: 100%;
 }
 
+.linksContainer ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
 .linksContainer img {
 	height: 2.5em;
 }
