--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,6 +13,7 @@ body {
   color: var(--color);
   font-family: 'Poppins', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  overflow-x: hidden;
 }
 
 a {
