--- a/src/components/AboutMe/AboutMe.module.css
+++ b/src/components/AboutMe/AboutMe.module.css
@@ -20,3 +20,6 @@
 .linksContainer [data-in-view="true"] img {
 	right: 0;
 }
+.linksContainer a:is(:focus, :active, :hover) img {
+	transform: scale(1.1);
+}
