--- a/src/components/GitHubCorner/GitHubCorner.module.css
+++ b/src/components/GitHubCorner/GitHubCorner.module.css
@@ -1,3 +1,4 @@
+
 .githubCorner:hover .octoArm {
 	animation: octocat-wave 560ms ease-in-out
 }
@@ -6,11 +7,17 @@
 	fill: #151513;
 	color: #fff;
 	position: fixed;
-	top: 0;
+	top: -100%;
+	right: -100%;
 	border: 0;
-	right: 0;
 	z-index: 1;
 	filter: drop-shadow(-20px -20px 20px black) drop-shadow(20px 20px 20px black);
+	transition: 10s 1s all;
+}
+
+.githubCorner[data-in-view="true"] svg {
+	top: 0;
+	right: 0;
 }
 
 .octoArm {
