--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,6 +15,24 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   overflow-x: hidden;
 }
+*::-webkit-scrollbar {
+  width: 10px;               /* width of the entire scrollbar */
+}
+
+*::-webkit-scrollbar-track {
+  background: #151513;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: #686868;
+  border-radius: 1rem;
+  border: 2px solid #151513;
+}
+
+* {
+  scrollbar-color: #686868 #151513;
+}
+
 
 a {
   color: rgb(102, 178, 255);
