--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -3,9 +3,10 @@
 	grid-template-columns: auto auto;
 	grid-gap: 1em;
 	text-align: center;
-	background-color: #049a8f;
+	background-color: var(--contact-background);
 	border-radius: 1em;
   color: black;
+  padding: 1rem;
 }
 
 
@@ -22,18 +23,18 @@
 .inputStyles {
 
   margin: 0.5em 0;
-  background: rgba(0, 0, 0, 0.25);
+  background: rgba(var(--contact-cv), var(--contact-cv), var(--contact-cv), 0.25);
   border: 0;
   border-radius: 0.25em;
   padding: 0.5em;
-  color: white;
+  color: var(--contact-placeholder-color);
   font-family: Roboto;
-  box-shadow: inset 0 0.125em 0.2em rgba(0, 0, 0, 0.18);
+  box-shadow: inset 0 0.125em 0.2em rgba(var(--contact-cv), var(--contact-cv), var(--contact-cv), 0.18);
   transition: all 0.25s;
 }
 
 .inputStyles:hover {
-  box-shadow: 0 0 3pt 2pt white;
+  box-shadow: 0 0 3pt 2pt var(--contact-placeholder-color);
 }
 
 .inputStyles:focus {
