--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -7,7 +7,7 @@
 	list-style: none;
 	margin: 0;
 	position: relative;
-	background: rgba(128, 128, 128, 0.25);
+	background: var(--footer-background);
 	border-radius: 4em;
 	display: inline-block;
 	padding: 0.5em 0.75em 0.25em 0.75em;
