--- a/src/components/GitHubCorner/GitHubCorner.module.css
+++ b/src/components/GitHubCorner/GitHubCorner.module.css
@@ -4,15 +4,15 @@
 }
 
 .githubCorner svg {
-	fill: #151513;
-	color: #fff;
+	fill: var(--scrollbar-thumb);
+	color: var(--color);
 	position: fixed;
 	top: -100%;
 	right: -100%;
 	border: 0;
 	z-index: 1;
-	filter: drop-shadow(-20px -20px 20px black) drop-shadow(20px 20px 20px black);
-	transition: 10s 1s all;
+	filter: drop-shadow(-20px -20px 20px var(--background-color)) drop-shadow(20px 20px 20px var(--background-color));
+	transition: 10s 1s top, 10s 1s right;
 }
 
 .githubCorner[data-in-view="true"] svg {
