--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -25,7 +25,7 @@
 	position: absolute;
 	width: 100%;
 	height: 75vh;
-	background-image: linear-gradient(0deg, hsl(200, 20%, 15%) 0%, rgba(0,0,0,0) 33%);
+	background-image: linear-gradient(0deg, var(--section-odd) 0%, rgba(0,0,0,0) 20%);
 }
 
 .header span {
@@ -39,6 +39,6 @@
 
 /** Cycle through all the hue-rotate values */
 @keyframes cycle-hues {
-	from { filter: hue-rotate(0deg); }
-	to { filter: hue-rotate(360deg); }
+	from { filter: hue-rotate(0deg) var(--header-inversion); }
+	to { filter: hue-rotate(360deg) var(--header-inversion); }
 }
