--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -7,7 +7,7 @@
 	.titleWrapper > p {
 		opacity: 0;
 		width: 100%;
-		color: hsl(200, 10%, 50%);
+		color: var(--section-subtitle-color);
 		font-weight: 900;
 		font-size: min(6em, 12.5vw);
 		margin: 0;
@@ -22,7 +22,7 @@
 		align-self: center;
 		position: absolute;
 		width: 100%;
-		color: white;
+		color: var(--color);
 		font-weight: 600;
 		font-size: min(2em, 4vw);
 		margin: 0;
