--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -18,6 +18,7 @@
 	background-repeat: no-repeat;
 	background-position: center center;
 	animation: cycle-hues 10s linear 2.5s infinite;
+	filter: var(--header-inversion);
 }
 
 .header::after {
