--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -14,7 +14,7 @@
 	position: absolute;
 	width: 100%;
 	height: 75vh;
-	background-image: url("/header.png");
+	background-image: var(--bg-url);
 	background-repeat: no-repeat;
 	background-position: center center;
 	animation: cycle-hues 10s linear 2.5s infinite;
