--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -43,6 +43,10 @@
   background: rgba(0, 0, 0, 0.5);
 }
 
+.inputStyles::placeholder {
+  color: var(--contact-placeholder-color);
+}
+
 .textarea {
 	width: 95%;
 	height: 10em;
